Revert "upgrade jdk17. (#122)"
This reverts commit b299c403b89f12416438e7576838ae548c1645c4.